<!--
  ~ Copyright 2022 Kontent s.r.o.
  ~
  ~  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <!-- config -->
    <string name="config_google_API_key">AIzaSyCOQ9ektD-0lc607MIiHCzKHfv2PPUmZGE</string>
    
    <!-- global items -->
    <string name="app_name">Kontent.ai Dancing Goat</string>

    <string name="app_main_activity_title">Dancing Goat</string>
    <string name="action_settings">Settings</string>
    <string name="error_network_failure_msg">Network connection failed</string>
    <string name="error_msg">Error occurred</string>
    <string name="error_network_not_available">Network not available</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="error_problem_fetching_data">There was a problem fetching data</string>
    <string name="try_again">TRY AGAIN</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_title">Dancing Goat</string>
    <string name="navigation_drawer_subtitle">kontent.ai</string>

    <!-- main menu items -->
    <string name="main_menu_cafes">Cafes</string>
    <string name="main_menu_articles">Articles</string>
    <string name="main_menu_coffees">Coffees</string>
    <string name="main_menu_extra">Extra</string>
    <string name="main_menu_contact">Contact</string>
    <string name="main_menu_test">Test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teaser_image">Teaser image</string>
    <string name="no_cafes">No cafes were found</string>
    <string name="cafe">Cafe</string>
    <string name="no_data">There is no data</string>
</resources>
